Cabal/tests/ParserTests/errors/multiple-libs.cabal
name:                multipleLibs
version:             0
synopsis:            multiple main/nameless libs
build-type:          Simple
cabal-version:       1.20

library
  default-language: Haskell2010
  exposed-modules:  ElseIf
  build-depends:    base

library
  default-language: Haskell2010
  exposed-modules:  ElseIf
